--- a/src/css/main.css
+++ b/src/css/main.css
@@ -14,7 +14,8 @@
   display: grid;
   text-align: center;
   background-color: #9c92f5;
-  min-width: 250px;
+  min-width: 300px;
+  border-radius: 15px;
 }
 
 .connexion h1 {
@@ -61,6 +62,13 @@
 .connexion .connexion__boutton:hover {
   background-color: greenyellow;
   cursor: grabbing;
+}
+
+.connexion a {
+  text-decoration: none;
+  color: white;
+  font-size: 2rem;
+  margin: 20px auto;
 }
 
 .totool {
