--- a/src/css/main.css
+++ b/src/css/main.css
@@ -185,8 +185,9 @@
 
 .totool__contenus__checkbox i {
   color: red;
-  grid-column: 3;
+  grid-column: 3/4;
   padding: 10px;
+  margin: auto;
 }
 
 * {
