--- a/scsss/_index.scss
+++ b/scsss/_index.scss
@@ -1,7 +1,7 @@
 .accueil {
     margin: auto;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 10% 80% 10%;
     grid-template-rows: 10rem 1fr 10rem;
 }
 .connexion {
@@ -13,7 +13,6 @@
     display: grid;
     text-align: center;
     background-color: #9c92f5;
-    min-width: 300px;
     border-radius: 15px;
 
     h1 {
@@ -61,4 +60,14 @@
         font-size: 2rem;
         margin: 20px auto;
     }
+}
+.alert-danger {
+    font-size: 2rem;
+    color: red;
+    margin: 10px auto;
+}
+.alert-success {
+    font-size: 2rem;
+    color: greenyellow;
+    margin: 10px auto;
 }
