--- a/scsss/main.scss
+++ b/scsss/main.scss
@@ -15,6 +15,9 @@ html {
 
     @media only screen and (max-width: $bp-small) {
         font-size: 50%;
+        .connexion {
+            grid-column: 1/-1;
+        }
     }
 }
 body {
