--- a/scsss/_totool.scss
+++ b/scsss/_totool.scss
@@ -5,8 +5,9 @@
         flex-direction: column;
         align-items: center;
         background-color: #9c92f5;
-        height: 10rem;
         color: white;
+        padding: 30px;
+
         font-family: "poppins";
         a {
             color: white;
@@ -23,6 +24,26 @@
         flex-direction: column;
         align-items: center;
         width: 90%;
+        &__contenu {
+            text-align: center;
+        }
+
+        &__options {
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            &__supprimer {
+                i {
+                    color: red;
+                    grid-column: 3/4;
+                    padding: 0px 10px;
+                    margin: auto;
+                }
+            }
+            &__modifier {
+                color: #9c92f5;
+            }
+        }
         &__formulaire {
             width: 90%;
             display: flex;
@@ -58,7 +79,7 @@
             grid-template-columns: 20% 60% 20%;
             margin: 2rem auto;
             width: 90%;
-            height: 6rem;
+            padding: 20px;
 
             font-family: "poppins";
             font-size: 2rem;
@@ -96,13 +117,6 @@
             }
             input[type="checkbox"]:checked:after {
                 display: block;
-            }
-
-            i {
-                color: red;
-                grid-column: 3/4;
-                padding: 10px;
-                margin: auto;
             }
         }
     }
